kubernetes/external-services.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana
  namespace: exoexplorer
spec:
  type: ExternalName
  externalName: kube-prom-stack-grafana.observability.svc.cluster.local
  ports:
    - port: 80

---
apiVersion: v1
kind: Service
metadata:
  name: prometheus
  namespace: exoexplorer
spec:
  type: ExternalName
  externalName: kube-prom-stack-kube-prome-prometheus.observability.svc.cluster.local
  ports:
    - port: 9090
